# nsw-parliament-scrapper-fawwaz

./: .gitignore  Dockerfile  README.md  bench.py  main.py  pyproject.toml  requirements.txt
guide/: chat.html  example.json  fragment.json  paper-2.html  paper.html  simple.html  table.html  toc.json
lib/: __init__.py  api.py  fragments.py  parser.py  storage.py  toc.py  url.py
