[project]
name = "nsw-parliament-scrapper"
version = "0.1.0"
description = "NSW Parliament Hansard scraper (daily TOC + fragments)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4",
  "requests",
  "fake-useragent",
  "tqdm",
  "lxml",
  "psutil",
]

[project.scripts]
nsw = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
